@@ -5,6 +5,7 @@
 - Fixed crash in qvariant-template-instantiation
 - Added missing methods to checks for detaching temporary/member lists or maps
 - Fixed crash when fully-qualified-moc-types encounters signals with expressions like "std::bitset<int(8)>"
+- Fixed crash in qstring-comparison-to-implicit-char
 
 * v1.14 (April 27, 2025)
 - Clazy warnings for the following line can be disabled, for example: clazy:exclude-next-line=check1,check2
